modifique botones y el index

--- a/eventos.html
+++ b/eventos.html
@@ -94,9 +94,9 @@
               </div>
               <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
-                <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com" role="button"><i class="bi-facebook logo_texto--color"></i></a>
-                <a class="btn btn--instagram btn-floating m-1" href="https://wwwwinstagram.com" role="button"><i class="bi-instagram logo_texto--color"></i></a>
-                <a class="btn btn--linkedin btn-floating m-1" href="www.linkedin.com" role="button"><i class="bi-linkedin logo_texto--color"></i></a>
+                <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
+                <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
+                <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
               </div>
             </div>
           </section>
