--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="col col-12 col-md-5 col-sm-12 sectionUno__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
             <img src="imagenes/daruma-rojo.png" alt="Daruma rojo" />
           </div>
-          <article class="col col-12 col-md-7 col-sm-12 sectionUno__texto">
+          <article class="col-12 col-md-7 col-sm-12 sectionUno__texto">
             <h1>Daruma</h1>
             <p>El muñeco daruma (達磨) es uno de los amuletos japoneses más conocidos, un muñeco de los propósitos hecho a mano que nos ayuda a conseguir todo aquello que nos propongamos.</p>
             <button type="button" class="btn btn-primary"><a href="subtitulos/daruma.html">Ver más</a></button>
@@ -76,22 +76,22 @@
         </div>
       </section>
       <!--       SEGUNDO SECTION      -->
-      <section class="container-fluid sectionDos" data-aos="fade-right" data-aos-offset="250" data-aos-duration="500">
+      <section class="container-fluid sectionDos" data-aos="flip-up" data-aos-offset="250" data-aos-duration="700">
         <div class="row">
-          <article class="col col-12 col-md-7 col-sm-12 sectionDos__texto">
+          <article class="col col-12 col-md-9 col-sm-12 sectionDos__texto">
             <div class="sectionDos__titulo"><h1>Omamori</h1></div>
             <p>Es otro popular amuleto japonés, una especie de colgante hecho de tela, cuyo objetivo fundamental es proteger y dar fortuna a los que lo llevan.</p>
             <div class="sectionDos__boton">
               <button type="button" class="btn btn-primary"><a href="subtitulos/omamori.html">Ver más</a></button>
             </div>
           </article>
-          <div class="col col-12 col-md-5 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
+          <div class="col col-12 col-md-3 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
             <img src="imagenes/amuleto-amor.png" alt="Amuleto amor" />
           </div>
         </div>
       </section>
       <!--        TERCER SECTION       -->
-      <section class="container-fluid sectionTres" data-aos="fade-left" data-aos-offset="250" data-aos-duration="500">
+      <section class="container-fluid sectionTres" data-aos="fade-right" data-aos-offset="250" data-aos-duration="500">
         <div class="row">
           <div class="col col-12 col-md-5 col-sm-12 sectionTres__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
           <article class="col col-12 col-md-7 col-sm-12 sectionTres__texto">
@@ -138,9 +138,9 @@
               </div>
               <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Redes Sociales</h6>
-                <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com" role="button"><i class="bi-facebook logo_texto--color"></i></a>
-                <a class="btn btn--instagram btn-floating m-1" href="https://wwwwinstagram.com" role="button"><i class="bi-instagram logo_texto--color"></i></a>
-                <a class="btn btn--linkedin btn-floating m-1" href="www.linkedin.com" role="button"><i class="bi-linkedin logo_texto--color"></i></a>
+                <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
+                <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
+                <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
               </div>
             </div>
           </section>
