--- a/index-dos.html
+++ b/index-dos.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="¡Oops! ¡Esta página no existe!" />
-    <meta name="keywords" content="daruma, amuleto, koinobori, japon, japones, asia, clases de japones, nihongo, nihon" />
+    <meta name="description" content="Koinobori Artesanías es una tienda que vende Darumas y Omamoris, amuletos clásicos japoneses, que te protegen, te ayudan y te motivan a cumplir los objetivos fijados." />
+    <meta name="keywords" content="daruma, amuleto, suerte, artesanal, artesanias, koinobori, japon, japones, asia, clases de japones, nihongo, nihon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="imagenes/favicon-32.png" sizes="32x32" />
     <link rel="shortcut icon" type="image/png" href="imagenes/favicon-76.png" sizes="76x76" />
@@ -17,11 +17,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>404 Error | Koinobori</title>
+    <title>Home | Koinobori</title>
   </head>
   <body>
     <header>
+      <!--       NAV         -->
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"><img class="logo" src="imagenes/logo.png" alt="logo" width="180px" /></a>
@@ -35,16 +38,15 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <ul class="dropdown-menu blue" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="subtitulos/daruma.html">Daruma</a></li>
                   <li><a class="dropdown-item" href="subtitulos/omamori.html">Omamori</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <ul class="dropdown-menu blue" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="subtitulos/japones.html">Japones</a></li>
-
                   <li><a class="dropdown-item" href="subtitulos/viajes.html">Viajes</a></li>
                 </ul>
               </li>
@@ -60,57 +62,40 @@
       </nav>
     </header>
     <main>
-      <div class="error">
-        <div class="error__texto">
-          <div class="error__titulo"><h1>404 Error</h1></div>
-          <div class="error__subtitulo"><h2>Page not found</h2></div>
-        </div>
-      </div>
-    </main>
-
-    <!-- Footer -->
-    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
-      <div class="container p-4 pb-0">
-        <section class="">
-          <div class="row">
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
-              <p><a href="../index.html">Home</a></p>
-              <p><a href="../nosotros.html">Nosotros</a></p>
-              <p><a href="../contacto.html">Contáctanos</a></p>
-            </div>
-            <hr class="w-100 clearfix d-md-none" />
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-              <p>
-                <a href="daruma.html" class="text-white">Daruma</a>
-              </p>
-              <p>
-                <a href="omamori.html" class="text-white">Omamori</a>
-              </p>
-              <p>
-                <a href="japones.html" class="text-white">Japones</a>
-              </p>
-            </div>
-            <hr class="w-100 clearfix d-md-none" />
-            <hr class="w-100 clearfix d-md-none" />
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-              <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Buenos Aires</p>
-              <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 54 11 0303456</p>
-            </div>
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
-              <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
-              <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
-              <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
-            </div>
+      <!--        PRIMER SECTION      -->
+      <section class="container-fluid sectionUno" data-aos="fade-left" data-aos-delay="150" data-aos-offset="250" data-aos-duration="500">
+        <div class="row">
+          <div class="col col-12 col-md-5 col-sm-12 sectionUno__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
+            <img src="imagenes/daruma-rojo.png" alt="Daruma rojo" />
           </div>
-        </section>
-      </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
-    </footer>
+          <article class="col col-12 col-md-7 col-sm-12 sectionUno__texto">
+            <h1>Daruma</h1>
+            <p>El muñeco daruma (達磨) es uno de los amuletos japoneses más conocidos, un muñeco de los propósitos hecho a mano que nos ayuda a conseguir todo aquello que nos propongamos.</p>
+            <button type="button" class="btn btn-primary"><a href="subtitulos/daruma.html">Ver más</a></button>
+          </article>
+        </div>
+      </section>
+      <!--       SEGUNDO SECTION      -->
+      <section class="container-fluid sectionDos" data-aos="fade-right" data-aos-offset="250" data-aos-duration="500">
+        <div class="row">
+          <article class="col col-12 col-md-7 col-sm-12 sectionDos__texto">
+            <div class="sectionDos__titulo"><h1>Omamori</h1></div>
+            <p>Es otro popular amuleto japonés, una especie de colgante hecho de tela, cuyo objetivo fundamental es proteger y dar fortuna a los que lo llevan.</p>
+            <div class="sectionDos__boton">
+              <button type="button" class="btn btn-primary"><a href="subtitulos/omamori.html">Ver más</a></button>
+            </div>
+          </article>
+          <div class="col col-12 col-md-5 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
+            <img src="imagenes/amuleto-amor.png" alt="Amuleto amor" />
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="aos.js"></script>
+    <script type="text/javascript">
+      AOS.init();
+    </script>
   </body>
 </html>
