agregue texto en viajes y modifique detalles en estilos

--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -84,7 +84,7 @@
               <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
-          <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
+          <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
             <img src="../imagenes/daruma-azul.png" class="card-img-top" alt="Daruma azul" />
             <div class="card-body">
               <h5 class="card-title">Daruma azul</h5>
@@ -93,7 +93,7 @@
               <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
             </div>
           </div>
-          <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
+          <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
             <img src="../imagenes/daruma-negro.png" class="card-img-top" alt="Daruma negro" />
             <div class="card-body">
               <h5 class="card-title">Daruma negro</h5>
