--- a/subtitulos/viajes.html
+++ b/subtitulos/viajes.html
@@ -94,7 +94,11 @@
           <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 becas__texto" data-aos="fade-up-left" data-aos-duration="1000" data-aos-delay="300">
             <div class="becas__titulo"><h2>Becas</h2></div>
             <div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique nihil minima, porro totam quas rerum nemo, atque illo at ex nostrum natus pariatur ipsam, libero non vero iure debitis. Quas?</p>
+              <h4 class="becas__texto-pregunta">¿Te interesa Japón y su cultura?</h4>
+              <p>
+                Esta es tu oportunidad, todos los años nos renovamos para traerte la mayor información y ayudarte a vivir una experiencia única. Infórmate con nosotros sobre las becas y cómo acceder a ellas. Contactanos, descubre todo lo que Japón
+                tiene para ofrecerte!
+              </p>
             </div>
           </article>
         </div>
