--- a/subtitulos/japones.html
+++ b/subtitulos/japones.html
@@ -64,7 +64,7 @@
     <main>
       <div class="animate__slideInDown animate__animated anim japones__titulo"><h1>Japonés</h1></div>
       <!--               SECCION               -->
-      <div class="container">
+      <div class="container-fluid japones__grid">
         <!--            PRIMER SECCION         -->
         <section class="row japonesUno">
           <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesUno__texto" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1000" data-aos-offset="300" data-aos-easing="ease-in-sine">
@@ -79,15 +79,16 @@
         <!--       SEGUNDA SECCION     -->
         <section class="row japonesDos">
           <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesDos__url" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <iframe
-              width="100%"
-              height="100%"
-              src="https://www.youtube.com/embed/WQYYKG-UMII"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+            <div class="japonesDos__url-caja">
+              <iframe
+                class="japonesDos__url-content"
+                src="https://www.youtube.com/embed/WQYYKG-UMII"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
           <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesDos__texto" data-aos="fade-left" data-aos-delay="100" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <h2 class="japonesDos__titulo">Intuitivas</h2>
@@ -98,7 +99,7 @@
         <section class="row japonesTres">
           <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesTres__texto" data-aos="fade-right" data-aos-delay="200" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <h2 class="japonesTres__titulo">Clases de Manga</h2>
-            <h4>Te interesa el mundo del manga y del anime?</h3>
+            <h4 class="japonesTres__subtitulo">Te interesa el mundo del manga y del anime?</h4>
             <p>Enseñamos desde la estructura básica de los clásicos mangas del 90' hasta los novedosos y estilizados diseños contemporáneos.</p>
           </article>
           <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 japonesTres__imagen" data-aos="zoom-in-left" data-aos-delay="200" data-aos-duration="1300">
@@ -107,50 +108,49 @@
         </section>
       </div>
     </main>
-      <!-- Footer -->
-      <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
-        <div class="container p-4 pb-0">
-          <section class="">
-            <div class="row">
-              <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
-                <p><a href="../index.html">Home</a></p>
-                <p><a href="../nosotros.html">Nosotros</a></p>
-                <p><a href="../contacto.html">Contáctanos</a></p>
-              </div>
-              <hr class="w-100 clearfix d-md-none" />
-              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-                <p>
-                  <a href="daruma.html" class="text-white">Daruma</a>
-                </p>
-                <p>
-                  <a href="omamori.html" class="text-white">Omamori</a>
-                </p>
-                <p>
-                  <a href="japones.html" class="text-white">Japones</a>
-                </p>
-              </div>
-              <hr class="w-100 clearfix d-md-none" />
-              <hr class="w-100 clearfix d-md-none" />
-              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-                <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Buenos Aires</p>
-                <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
-                <p><i class="fas fa-phone mr-3"></i> + 54 11 0303456</p>
-              </div>
-              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
-                <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
-                <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
-                <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
-              </div>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+      <div class="container p-4 pb-0">
+        <section class="">
+          <div class="row">
+            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
+              <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
+              <p><a href="../index.html">Home</a></p>
+              <p><a href="../nosotros.html">Nosotros</a></p>
+              <p><a href="../contacto.html">Contáctanos</a></p>
             </div>
-          </section>
-        </div>
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
-      </footer>
-    </div>
+            <hr class="w-100 clearfix d-md-none" />
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
+              <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+              <p>
+                <a href="daruma.html" class="text-white">Daruma</a>
+              </p>
+              <p>
+                <a href="omamori.html" class="text-white">Omamori</a>
+              </p>
+              <p>
+                <a href="japones.html" class="text-white">Japones</a>
+              </p>
+            </div>
+            <hr class="w-100 clearfix d-md-none" />
+            <hr class="w-100 clearfix d-md-none" />
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
+              <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+              <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Buenos Aires</p>
+              <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
+              <p><i class="fas fa-phone mr-3"></i> + 54 11 0303456</p>
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+              <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
+              <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
+              <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
+              <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
+            </div>
+          </div>
+        </section>
+      </div>
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="../aos.js"></script>
