--- a/subtitulos/viajes.html
+++ b/subtitulos/viajes.html
@@ -88,18 +88,16 @@
         </div>
       </div>
       <!--    BECAS         -->
-      <section class="container becas">
-        <div class="row">
-          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 becas__imagen" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="300"><img src="../imagenes/viajes.jpg" alt="Beca japon" width="70%" /></div>
-          <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 becas__texto" data-aos="fade-up-left" data-aos-duration="1000" data-aos-delay="300">
+      <section class="container-fluid becas__caja">
+        <div class="row becas__caja-row">
+          <div class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 becas__imagen" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="150"><img src="../imagenes/viajes.jpg" alt="Beca japon" /></div>
+          <article class="col col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 becas__texto" data-aos="zoom-out-up" data-aos-duration="1000" data-aos-delay="300">
             <div class="becas__titulo"><h2>Becas</h2></div>
-            <div>
-              <h4 class="becas__texto-pregunta">¿Te interesa Japón y su cultura?</h4>
-              <p>
-                Esta es tu oportunidad, todos los años nos renovamos para traerte la mayor información y ayudarte a vivir una experiencia única. Infórmate con nosotros sobre las becas y cómo acceder a ellas. Contactanos, descubre todo lo que Japón
-                tiene para ofrecerte!
-              </p>
-            </div>
+            <h4 class="becas__texto-pregunta">¿Te interesa Japón y su cultura?</h4>
+            <p>
+              Esta es tu oportunidad, todos los años nos renovamos para traerte la mayor información y ayudarte a vivir una experiencia única. Infórmate con nosotros sobre las becas y cómo acceder a ellas. Contactanos, descubre todo lo que Japón
+              tiene para ofrecerte!
+            </p>
           </article>
         </div>
       </section>
