acomode el footer

--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -105,51 +105,48 @@
         </div>
       </div>
     </main>
-
     <!-- Footer -->
     <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
       <div class="container p-4 pb-0">
-        <section class="">
-          <div class="row">
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
-              <p><a href="../index.html">Home</a></p>
-              <p><a href="../nosotros.html">Nosotros</a></p>
-              <p><a href="../contacto.html">Contáctanos</a></p>
-            </div>
-            <hr class="w-100 clearfix d-md-none" />
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-              <p>
-                <a href="daruma.html" class="text-white">Daruma</a>
-              </p>
-              <p>
-                <a href="omamori.html" class="text-white">Omamori</a>
-              </p>
-              <p>
-                <a href="japones.html" class="text-white">Japones</a>
-              </p>
-            </div>
-            <hr class="w-100 clearfix d-md-none" />
-            <hr class="w-100 clearfix d-md-none" />
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-              <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Buenos Aires</p>
-              <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 54 11 0303456</p>
-            </div>
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Nuestras redes</h6>
-              <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
-              <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
-              <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
-            </div>
+        <div class="row">
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
+            <p><a href="index.html">Home</a></p>
+            <p><a href="nosotros.html">Nosotros</a></p>
+            <p><a href="contacto.html">Contáctanos</a></p>
           </div>
-        </section>
+          <hr class="w-100 clearfix d-md-none" />
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+            <p>
+              <a href="subtitulos/daruma.html" class="text-white">Daruma</a>
+            </p>
+
+            <p>
+              <a href="subtitulos/japones.html" class="text-white">Japones</a>
+            </p>
+            <p>
+              <a href="subtitulos/omamori.html" class="text-white">Omamori</a>
+            </p>
+          </div>
+          <hr class="w-100 clearfix d-md-none" />
+          <hr class="w-100 clearfix d-md-none" />
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+            <p><i class="fas fa-phone mr-3"></i> +54 11 0303456</p>
+            <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Bs As</p>
+            <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
+          </div>
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Redes Sociales</h6>
+            <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
+            <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
+            <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
+          </div>
+        </div>
       </div>
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="../aos.js"></script>
