cambie el video

--- a/subtitulos/japones.html
+++ b/subtitulos/japones.html
@@ -82,7 +82,7 @@
             <div class="japonesDos__url-caja">
               <iframe
                 class="japonesDos__url-content"
-                src="https://www.youtube.com/embed/WQYYKG-UMII"
+                src="https://www.youtube.com/embed/ICkz2D816TA"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
