modifique el nav, botones y media queries

--- a/contacto.html
+++ b/contacto.html
@@ -35,14 +35,14 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
+                <a class="nav-link" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
                 <ul class="dropdown-menu blue" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="subtitulos/daruma.html">Daruma</a></li>
                   <li><a class="dropdown-item" href="subtitulos/omamori.html">Omamori</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
+                <a class="nav-link" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="subtitulos/japones.html">Japones</a></li>
                   <li><a class="dropdown-item" href="subtitulos/viajes.html">Viajes</a></li>
@@ -61,11 +61,11 @@
     </header>
     <main>
       <!--       MAPA & FORM        -->
-      <div class="container contacto">
-        <div class="row g-3">
+      <div class="container-fluid contacto">
+        <div class="row g-3 contacto__caja">
           <div class="col-12 contacto__titulo"><h2>Contáctanos por más información</h2></div>
           <iframe
-            class="col px-2 m-2 pt-3 pb-5"
+            class="col col-sm-12 col-md-6"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52442.0071688614!2d-58.45486143981961!3d-34.76502683686067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd261abf8fb75%3A0xd3b4119f62723032!2sLomas%20de%20Zamora%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1621783852236!5m2!1ses-419!2sar"
             width="600"
             height="450"
@@ -73,7 +73,7 @@
             allowfullscreen=""
             loading="lazy"
           ></iframe>
-          <div class="col px-5">
+          <div class="col col-sm-12 col-md-6">
             <form class="row g-3">
               <div class="col-md-4">
                 <label for="validationDefault01" class="form-label">Nombre</label>
