--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
-                <ul class="dropdown-menu blue" aria-labelledby="navbarDropdownMenuLink">
+                <a class="nav-link" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="subtitulos/daruma.html">Daruma</a></li>
                   <li><a class="dropdown-item" href="subtitulos/omamori.html">Omamori</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
-                <ul class="dropdown-menu blue" aria-labelledby="navbarDropdownMenuLink">
+                <a class="nav-link" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="subtitulos/japones.html">Japones</a></li>
                   <li><a class="dropdown-item" href="subtitulos/viajes.html">Viajes</a></li>
                 </ul>
@@ -71,7 +71,7 @@
           <article class="col-12 col-md-7 col-sm-12 sectionUno__texto">
             <h1>Daruma</h1>
             <p>El muñeco daruma (達磨) es uno de los amuletos japoneses más conocidos, un muñeco de los propósitos hecho a mano que nos ayuda a conseguir todo aquello que nos propongamos.</p>
-            <button type="button" class="btn btn-primary"><a href="subtitulos/daruma.html">Ver más</a></button>
+            <a class="btn btn-primary" href="subtitulos/daruma.html">Ver más</a>
           </article>
         </div>
       </section>
@@ -82,7 +82,7 @@
             <div class="sectionDos__titulo"><h1>Omamori</h1></div>
             <p>Es otro popular amuleto japonés, una especie de colgante hecho de tela, cuyo objetivo fundamental es proteger y dar fortuna a los que lo llevan.</p>
             <div class="sectionDos__boton">
-              <button type="button" class="btn btn-primary"><a href="subtitulos/omamori.html">Ver más</a></button>
+              <a class="btn btn-primary" href="subtitulos/omamori.html">Ver más</a>
             </div>
           </article>
           <div class="col col-12 col-md-3 col-sm-12 sectionDos__imagen" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
@@ -97,7 +97,7 @@
           <article class="col col-12 col-md-7 col-sm-12 sectionTres__texto">
             <div class="sectionTres__titulo"><h1>Japones</h1></div>
             <p>Clases o apoyo del idioma japonés desde cualquier parte del mundo de una manera súper sencilla y didáctica.</p>
-            <button type="button" class="btn btn-primary"><a href="subtitulos/japones.html">Ver más</a></button>
+            <a class="btn btn-primary" href="subtitulos/japones.html">Ver más</a>
           </article>
         </div>
       </section>
