--- a/nosotros.html
+++ b/nosotros.html
@@ -37,14 +37,14 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
+                <a class="nav-link" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="subtitulos/daruma.html">Daruma</a></li>
                   <li><a class="dropdown-item" href="subtitulos/omamori.html">Omamori</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
+                <a class="nav-link" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="subtitulos/japones.html">Japones</a></li>
                   <li><a class="dropdown-item" href="subtitulos/viajes.html">Viajes</a></li>
