--- a/subtitulos/omamori.html
+++ b/subtitulos/omamori.html
@@ -6,11 +6,11 @@
     <meta name="description" content="El omamori es un popular amuleto japonés, una especie de colgante hecho de tela, cuyo objetivo fundamental es proteger y dar fortuna a los que lo llevan." />
     <meta name="keywords" content="daruma, amuleto, omamori, cultura,koinobori, japon, japones, asia, clases de japones, nihongo, nihon, " />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-32.png" sizes="32x32" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-76.png" sizes="76x76" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-96.png" sizes="96x96" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-128.png" sizes="128x128" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-192.png" sizes="192x192" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-32.png" sizes="32x32" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-76.png" sizes="76x76" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-96.png" sizes="96x96" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-128.png" sizes="128x128" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-192.png" sizes="192x192" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -37,14 +37,14 @@
                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
+                <a class="nav-link" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="daruma.html">Daruma</a></li>
                   <li><a class="dropdown-item" href="omamori.html">Omamori</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
+                <a class="nav-link" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="japones.html">Japones</a></li>
                   <li><a class="dropdown-item" href="viajes.html">Viajes</a></li>
@@ -70,7 +70,7 @@
             <img src="../imagenes/amuleto-viajeseguro.png" class="card-img-top" alt="Amuleto rojo" />
             <div class="card-body">
               <h5 class="card-title">Viaje Seguro</h5>
-              <h6 >Kōtsū Anzen</h6>
+              <h6>Kōtsū Anzen</h6>
               <p class="card-text">Es el omamori perfecto para los conductores y los viajeros, que busca protegerlos de todo tipo de accidentes.</p>
               <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
               <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
@@ -149,49 +149,49 @@
         </div>
       </div>
     </main>
-      <!-- Footer -->
-      <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
-        <div class="container p-4 pb-0">
-          <div class="row">
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
-              <p><a href="index.html">Home</a></p>
-              <p><a href="nosotros.html">Nosotros</a></p>
-              <p><a href="contacto.html">Contáctanos</a></p>
-            </div>
-            <hr class="w-100 clearfix d-md-none" />
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-              <p>
-                <a href="subtitulos/daruma.html" class="text-white">Daruma</a>
-              </p>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+      <div class="container p-4 pb-0">
+        <div class="row">
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
+            <p><a href="index.html">Home</a></p>
+            <p><a href="nosotros.html">Nosotros</a></p>
+            <p><a href="contacto.html">Contáctanos</a></p>
+          </div>
+          <hr class="w-100 clearfix d-md-none" />
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+            <p>
+              <a href="subtitulos/daruma.html" class="text-white">Daruma</a>
+            </p>
 
-              <p>
-                <a href="subtitulos/japones.html" class="text-white">Japones</a>
-              </p>
-              <p>
-                <a href="subtitulos/omamori.html" class="text-white">Omamori</a>
-              </p>
-            </div>
-            <hr class="w-100 clearfix d-md-none" />
-            <hr class="w-100 clearfix d-md-none" />
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-              <p><i class="fas fa-phone mr-3"></i> +54 11 0303456</p>
-              <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Bs As</p>
-              <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
-            </div>
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Redes Sociales</h6>
-              <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
-              <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
-              <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
-            </div>
+            <p>
+              <a href="subtitulos/japones.html" class="text-white">Japones</a>
+            </p>
+            <p>
+              <a href="subtitulos/omamori.html" class="text-white">Omamori</a>
+            </p>
+          </div>
+          <hr class="w-100 clearfix d-md-none" />
+          <hr class="w-100 clearfix d-md-none" />
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-tres">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+            <p><i class="fas fa-phone mr-3"></i> +54 11 0303456</p>
+            <p><i class="fas fa-home mr-3"></i> Lomas de Zamora, Bs As</p>
+            <p><i class="fas fa-envelope mr-3"></i> info@koinoboriartesanias.com</p>
+          </div>
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Redes Sociales</h6>
+            <a class="btn btn--facebook btn-floating m-1" href="https://www.facebook.com/Koinoboriartesanias" role="button"><i class="bi-facebook logo_texto--color"></i></a>
+            <a class="btn btn--instagram btn-floating m-1" href="https://www.instagram.com/koinoboriartesanias/" role="button"><i class="bi-instagram logo_texto--color"></i></a>
+            <a class="btn btn--youtube btn-floating m-1" href="https://www.youtube.com/channel/UCbJiPBfxL0TRz933hZ_a2cQ" role="button"><i class="bi-youtube logo_texto--color"></i></a>
           </div>
         </div>
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
-      </footer>
-    </div>
+      </div>
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">© 2020 Copyright</div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="../aos.js"></script>
