--- a/subtitulos/viajes.html
+++ b/subtitulos/viajes.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Al hablar tanto de Japón, provocan esas ganas inmensas de conocer el país. ¡Existen becas a las cuales te podes aplicar!, no te pierdas esa oportunidad." />
     <meta name="keywords" content="daruma, amuleto, koinobori, japon, japones, asia, clases de japones, nihongo, nihon, viajes" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-32.png" sizes="32x32" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-76.png" sizes="76x76" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-96.png" sizes="96x96" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-128.png" sizes="128x128" />
-    <link rel="shortcut icon" type="image/png" href="imagenes/favicon-192.png" sizes="192x192" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-32.png" sizes="32x32" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-76.png" sizes="76x76" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-96.png" sizes="96x96" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-128.png" sizes="128x128" />
+    <link rel="shortcut icon" type="image/png" href="../imagenes/favicon-192.png" sizes="192x192" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -37,14 +37,14 @@
                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
+                <a class="nav-link  href="productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Productos</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="daruma.html">Daruma</a></li>
                   <li><a class="dropdown-item" href="omamori.html">Omamori</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
+                <a class="nav-link" href="eventos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Eventos </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="japones.html">Japones</a></li>
                   <li><a class="dropdown-item" href="viajes.html">Viajes</a></li>
