arregle el scroll de index

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <main>
       <!--        PRIMER SECTION      -->
-      <section class="container-fluid sectionUno" data-aos="fade-left" data-aos-delay="150" data-aos-offset="250" data-aos-duration="500">
+      <section class="container-fluid sectionUno" data-aos-once="false" data-aos="fade-left" data-aos-delay="150" data-aos-offset="250">
         <div class="row">
           <div class="col col-12 col-md-5 col-sm-12 sectionUno__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500">
             <img src="imagenes/daruma-rojo.png" alt="Daruma rojo" />
@@ -76,7 +76,7 @@
         </div>
       </section>
       <!--       SEGUNDO SECTION      -->
-      <section class="container-fluid sectionDos" data-aos="flip-up" data-aos-offset="250" data-aos-duration="700">
+      <section class="container-fluid sectionDos" data-aos-once="true" data-aos="flip-left" data-aos-offset="250" data-aos-duration="700">
         <div class="row">
           <article class="col col-12 col-md-9 col-sm-12 sectionDos__texto">
             <div class="sectionDos__titulo"><h1>Omamori</h1></div>
@@ -91,7 +91,7 @@
         </div>
       </section>
       <!--        TERCER SECTION       -->
-      <section class="container-fluid sectionTres" data-aos="fade-right" data-aos-offset="250" data-aos-duration="500">
+      <section class="container-fluid sectionTres" data-aos-once="true" data-aos="fade-right" data-aos-offset="250" data-aos-duration="500">
         <div class="row">
           <div class="col col-12 col-md-5 col-sm-12 sectionTres__imagen" data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="1500"><img src="imagenes/logo_chibariyo.png" alt="Logo de las clases de japones" /></div>
           <article class="col col-12 col-md-7 col-sm-12 sectionTres__texto">
@@ -105,7 +105,7 @@
     <div>
       <!-- Footer -->
       <footer class="text-center text-lg-start text-white" style="background-color: #929fba">
-        <div class="container p-4 pb-0">
+        <div class="container">
           <div class="row">
             <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
               <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
