moidificacion del html en darumas, omamori, productos

--- a/subtitulos/omamori.html
+++ b/subtitulos/omamori.html
@@ -72,8 +72,12 @@
               <h5 class="card-title">Viaje Seguro</h5>
               <h6>Kōtsū Anzen</h6>
               <p class="card-text">Es el omamori perfecto para los conductores y los viajeros, que busca protegerlos de todo tipo de accidentes.</p>
-              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
+              <p id="price_omamori-trip" class="price_amulet">$280</p>
+              <form id="cart_omamori-trip">
+                <button type="submit" class="btn btn-primary">Comprar ahora</button>
+                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <input id="amount" type="number" value="0" min="0" />
+              </form>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -82,8 +86,12 @@
               <h5 class="card-title">Amor</h5>
               <h6>Rennai Jouju</h6>
               <p class="card-text">Ideal para aquellos/as que quieren encontrar pareja.</p>
-              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
+              <p id="price_omamori-love" class="price_amulet">$280</p>
+              <form id="cart_omamori-love">
+                <button type="submit" class="btn btn-primary">Comprar ahora</button>
+                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <input id="amount" type="number" value="0" min="0" />
+              </form>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -92,8 +100,12 @@
               <h5 class="card-title">Niña</h5>
               <h6>Kodomo Mori</h6>
               <p class="card-text">Este Omamori es para niñas. Es una bendición para la seguridad, la salud y el estudio de un niña.</p>
-              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
+              <p id="price_omamori-girl" class="price_amulet">$280</p>
+              <form id="cart_omamori-girl">
+                <button type="submit" class="btn btn-primary">Comprar ahora</button>
+                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <input id="amount" type="number" value="0" min="0" />
+              </form>
             </div>
           </div>
           <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -102,8 +114,12 @@
               <h5 class="card-title">Familia</h5>
               <h6>Kanai Anzen</h6>
               <p class="card-text">Amuleto que trae paz y prosperidad al hogar familiar y a todos sus integrantes.</p>
-              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
+              <p id="price_omamori-family" class="price_amulet">$280</p>
+              <form id="cart_omamori-family">
+                <button type="submit" class="btn btn-primary">Comprar ahora</button>
+                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <input id="amount" type="number" value="0" min="0" />
+              </form>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -112,8 +128,12 @@
               <h5 class="card-title">Estudio</h5>
               <h6>Gakugyō</h6>
               <p class="card-text">Busca darnos suerte en los estudios y en los exámenes. Si tenes un amigo/a a punto de rendir, este es un regalo ideal.</p>
-              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
+              <p id="price_omamori-study" class="price_amulet">$280</p>
+              <form id="cart_omamori-study">
+                <button type="submit" class="btn btn-primary">Comprar ahora</button>
+                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <input id="amount" type="number" value="0" min="0" />
+              </form>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -122,8 +142,12 @@
               <h5 class="card-title">Salud</h5>
               <h6>Kenko</h6>
               <p class="card-text">Omamori que nos protege de las enfermedades para asegurarnos una vida llena de salud.</p>
-              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
+              <p id="price_omamori-health" class="price_amulet">$280</p>
+              <form id="cart_omamori-health">
+                <button type="submit" class="btn btn-primary">Comprar ahora</button>
+                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <input id="amount" type="number" value="0" min="0" />
+              </form>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -132,8 +156,12 @@
               <h5 class="card-title">Niño</h5>
               <h6>Kodomo Mori</h6>
               <p class="card-text">Este Omamori es para niños. Es una bendición para la seguridad, la salud y el estudio de un niño.</p>
-              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
+              <p id="price_omamori-boy" class="price_amulet">$280</p>
+              <form id="cart_omamori-boy">
+                <button type="submit" class="btn btn-primary">Comprar ahora</button>
+                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <input id="amount" type="number" value="0" min="0" />
+              </form>
             </div>
           </div>
           <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="card col-md-3" style="width: 18rem">
@@ -142,8 +170,12 @@
               <h5 class="card-title">Negocios</h5>
               <h6>Shōbai Hanjō</h6>
               <p class="card-text">Amuleto perfecto para conseguir éxito en un negocio y cuidar así nuestra situación laboral y económica.</p>
-              <p><a href="../404.html" class="btn btn-primary">Comprar ahora</a></p>
-              <a href="../404.html" class="btn btn-secondary">Agregar al carrito</a>
+              <p id="price_omamori-business" class="price_amulet">$280</p>
+              <form id="cart_omamori-business">
+                <button type="submit" class="btn btn-primary">Comprar ahora</button>
+                <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
+                <input id="amount" type="number" value="0" min="0" />
+              </form>
             </div>
           </div>
         </div>
@@ -155,9 +187,9 @@
         <div class="row">
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
             <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
-            <p><a href="index.html">Home</a></p>
-            <p><a href="nosotros.html">Nosotros</a></p>
-            <p><a href="contacto.html">Contáctanos</a></p>
+            <p><a href="../index.html">Home</a></p>
+            <p><a href="../nosotros.html">Nosotros</a></p>
+            <p><a href="../contacto.html">Contáctanos</a></p>
           </div>
           <hr class="w-100 clearfix d-md-none" />
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
