--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -71,7 +71,7 @@
             <div class="card-body">
               <h5 class="card-title">Daruma rojo</h5>
               <p class="card-text">Para la buena suerte, la felicidad, el miedo, la ira y el sol.</p>
-              <p id="price_daruma-red" class="price_darumas">$250</p>
+              <p id="price_daruma-red" class="price_amulet">$250</p>
               <form id="cart_daruma-red">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
@@ -84,7 +84,7 @@
             <div class="card-body">
               <h5 class="card-title">Daruma verde</h5>
               <p class="card-text">Vitalidad. Mejorar la salud y la condición física.</p>
-              <p id="price_daruma-greenb" class="price_darumas">$260</p>
+              <p id="price_daruma-greenb" class="price_amulet">$260</p>
               <form id="cart_daruma-green">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
@@ -97,7 +97,7 @@
             <div class="card-body">
               <h5 class="card-title">Daruma azul</h5>
               <p class="card-text">Trabajo o escuela. Representa la calma, la confianza, la tranquilidad, la honestidad.</p>
-              <p id="price_daruma-blue" class="price_darumas">$270</p>
+              <p id="price_daruma-blue" class="price_amulet">$270</p>
               <form id="cart_daruma-blue">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
@@ -110,7 +110,7 @@
             <div class="card-body">
               <h5 class="card-title">Daruma negro</h5>
               <p class="card-text">Seguridad. Está diseñado para prevenir desastres naturales, o cualquier otro mal.</p>
-              <p id="price_daruma-black" class="price_darumas">$280</p>
+              <p id="price_daruma-black" class="price_amulet">$280</p>
               <form id="cart_daruma-black">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
@@ -127,9 +127,9 @@
         <div class="row">
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
             <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
-            <p><a href="index.html">Home</a></p>
-            <p><a href="nosotros.html">Nosotros</a></p>
-            <p><a href="contacto.html">Contáctanos</a></p>
+            <p><a href="../index.html">Home</a></p>
+            <p><a href="../nosotros.html">Nosotros</a></p>
+            <p><a href="../contacto.html">Contáctanos</a></p>
           </div>
           <hr class="w-100 clearfix d-md-none" />
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
@@ -166,7 +166,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="../aos.js"></script>
-    <script src="../prueba.js"></script>
     <script src="../daruma.js"></script>
     <script type="text/javascript">
       AOS.init();
