--- a/subtitulos/japones.html
+++ b/subtitulos/japones.html
@@ -114,9 +114,9 @@
         <div class="row">
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 footer__columna-uno">
             <h6 class="text-uppercase mb-4 font-weight-bold">Koinobori Artesanías</h6>
-            <p><a href="index.html">Home</a></p>
-            <p><a href="nosotros.html">Nosotros</a></p>
-            <p><a href="contacto.html">Contáctanos</a></p>
+            <p><a href="../index.html">Home</a></p>
+            <p><a href="../nosotros.html">Nosotros</a></p>
+            <p><a href="../contacto.html">Contáctanos</a></p>
           </div>
           <hr class="w-100 clearfix d-md-none" />
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 footer__columna-dos">
