agregue via jquery los precios de los darumas

--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -69,9 +69,9 @@
           <div class="card col-md-3" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" style="width: 18rem">
             <img src="../imagenes/daruma-rojo.png" class="card-img-top" alt="Daruma rojo" />
             <div class="card-body">
-              <h5 class="card-title">Daruma rojo</h5>
+              <h5 id="title_daruma-red" class="card-title">Daruma Rojo</h5>
               <p class="card-text">Para la buena suerte, la felicidad, el miedo, la ira y el sol.</p>
-              <p id="price_daruma-red" class="price_amulet">$250</p>
+              <p id="price_daruma-red" class="price_amulet"></p>
               <form id="cart_daruma-red">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
@@ -84,7 +84,7 @@
             <div class="card-body">
               <h5 class="card-title">Daruma verde</h5>
               <p class="card-text">Vitalidad. Mejorar la salud y la condición física.</p>
-              <p id="price_daruma-greenb" class="price_amulet">$260</p>
+              <p id="price_daruma-green" class="price_amulet"></p>
               <form id="cart_daruma-green">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
@@ -97,7 +97,7 @@
             <div class="card-body">
               <h5 class="card-title">Daruma azul</h5>
               <p class="card-text">Trabajo o escuela. Representa la calma, la confianza, la tranquilidad, la honestidad.</p>
-              <p id="price_daruma-blue" class="price_amulet">$270</p>
+              <p id="price_daruma-blue" class="price_amulet"></p>
               <form id="cart_daruma-blue">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
@@ -110,7 +110,7 @@
             <div class="card-body">
               <h5 class="card-title">Daruma negro</h5>
               <p class="card-text">Seguridad. Está diseñado para prevenir desastres naturales, o cualquier otro mal.</p>
-              <p id="price_daruma-black" class="price_amulet">$280</p>
+              <p id="price_daruma-black" class="price_amulet"></p>
               <form id="cart_daruma-black">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
