--- a/subtitulos/omamori.html
+++ b/subtitulos/omamori.html
@@ -142,7 +142,7 @@
               <h5 class="card-title">Salud</h5>
               <h6>Kenko</h6>
               <p class="card-text">Omamori que nos protege de las enfermedades para asegurarnos una vida llena de salud.</p>
-              <p id="price_omamori-health" class="price_amulet">$280</p>
+              <p id="price_omamori-health" class="price_amulet"></p>
               <form id="cart_omamori-health">
                 <button type="submit" class="btn btn-primary">Comprar ahora</button>
                 <button id="btn-cart" type="submit" class="btn btn-secondary">Agregar al carrito</button>
