arreglo del boton

--- a/subtitulos/daruma.html
+++ b/subtitulos/daruma.html
@@ -79,7 +79,7 @@
               <p class="card-text">Para la buena suerte, la felicidad, el miedo, la ira y el sol.</p>
               <p class="price_amulet red"></p>
               <form id="cart_daruma-red">
-                <button class="btn btn-primary buyProduct">Comprar ahora</button>
+                <a href="../carrito.html" class="btn btn-primary buyProduct">Comprar ahora</a>
               </form>
               <button class="addCartBtn cart1 btn btn-secondary">Agregar al carrito</button>
             </div>
@@ -91,7 +91,7 @@
               <p class="card-text">Vitalidad. Mejorar la salud y la condición física.</p>
               <p class="price_amulet green"></p>
               <form id="cart_daruma-green">
-                <button type="submit" class="btn btn-primary buyProduct">Comprar ahora</button>
+                <a href="../carrito.html" type="submit" class="btn btn-primary buyProduct">Comprar ahora</a>
               </form>
               <button type="submit" class="addCartBtn cart2 btn btn-secondary">Agregar al carrito</button>
             </div>
@@ -103,7 +103,7 @@
               <p class="card-text">Trabajo o escuela. Representa la calma, la confianza, la tranquilidad, la honestidad.</p>
               <p class="price_amulet blue"></p>
               <form id="cart_daruma-blue">
-                <button type="submit" class="btn btn-primary buyProduct">Comprar ahora</button>
+                <a href="../carrito.html" type="submit" class="btn btn-primary buyProduct">Comprar ahora</a>
               </form>
               <button type="submit" class="addCartBtn cart3 btn btn-secondary">Agregar al carrito</button>
             </div>
@@ -115,7 +115,7 @@
               <p class="card-text">Seguridad. Está diseñado para prevenir desastres naturales, o cualquier otro mal.</p>
               <p class="price_amulet black"></p>
               <form id="cart_daruma-black">
-                <button type="submit" class="btn btn-primary buyProduct">Comprar ahora</button>
+                <a href="../carrito.html" type="submit" class="btn btn-primary buyProduct">Comprar ahora</a>
               </form>
               <button type="submit" class="addCartBtn cart4 btn btn-secondary">Agregar al carrito</button>
             </div>
